--- a/index.html
+++ b/index.html
@@ -1,306 +1,135 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Debashis Barman | Designer & Developer</title>
-<meta name="description" content="Designer and developer; specialize in fluid design and mobile development; passionate programmer and microblogger">
-<meta name="keywords" content="Web Designer, Developer Debashis Barman, Responsive Web Design, Minimal Web Design"/>
-<meta name="theme-color" content="#41506f">
-<link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
-<link rel="stylesheet" href="./css/kathamo.min.css"/>
-<link rel="stylesheet" href="./fa/css/font-awesome.css"/>
-<link href='https://fonts.googleapis.com/css?family=Open+Sans|Montserrat' rel='stylesheet' type='text/css'>
-<script src="./js/jquery.js"></script>
-<script src="./js/tweecool.js"></script>
-<style>
-html {
-  font-size: 100%;
-}
-
-body {
-  font-family: 'Open Sans', sans-serif;
-  background-color: rgba(134, 141, 162, .1);
-  background-color: #fefefe;
-}
-
-header {
-  display: table;
-  width: 100%;
-  padding-top: 5%;
-  padding-bottom: 2%;
-  background-color: #41506f;
-  background-image: url(./img/cover.jpg);
-  background: linear-gradient(rgba(25, 40, 71, 1), rgba(25, 40, 71, .6)), url(./img/cover.jpg);
-  background-size: cover;
-  background-position: top center;
-}
-
-@media (max-width: 767px) {
-
-  header {
-    height: 144px;
-  }
-
-}
-
-header a,
-header a:active,
-header a:hover {
-  color: #fff;
-}
-
-.fa-2x {
-  font-size: 1.6rem;
-}
-
-.fa-fw {
-  width: 3rem;
-}
-
-@media (max-width: 767px) {
-
-  .fa-fw {
-    width: 2.5rem;
-  }
-
-}
-
-.button-wrapper {
-  padding-top: 3%;
-  padding-bottom: 3%;
-}
-
-header .button {
-  padding: 8px 13px;
-  border: 1px solid #fff;
-  border-radius: 5px;
-}
-
-.vertical-center {
-  display: table-cell;
-  vertical-align: middle;
-  color: #fff;
-}
-
-a,
-a:active,
-a:hover {
-  !color: #41506f;
-  text-decoration: none;
-  -webkit-tap-highlight-color: rgba(0,0,0, 0.0);
-  outline: none;
-}
-
-h1 {
-  font-weight: 500;
-}
-
-h2 {
-  max-width: 55ch;
-  margin-right: auto;
-  margin-left: auto; 
-  font-size: 1rem;
-  line-height: 1.75;
-}
-
-.avatar {
-  width: 144px;
-  border: 5px solid #fff;
-  border-radius: 12px;
-}
-
-@media (max-width: 767px) {
-
-  .avatar {
-    width: 6.846153846rem;
-  }
-
-}
-
-.blog {
-  min-height: 377px;
-  margin-top: 3%;
-  padding-right: 3%;
-  padding-left: 3%;
-}
-
-.blog ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-@media (max-width: 767px) {
-
-  .blog {
-    padding: 0;
-  }
-
-}
-
-.blog li {
-  float: left;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  width: 33.33%;
-}
-
-@media (max-width: 767px) {
-
-  .blog li {
-    width: 100%;
-  }
-
-}
-
-.blog li .blog__post {
-  box-sizing: border-box;
-  min-height: 89px;
-  margin: 2%;
-  padding: 15px 20px;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 1rem;
-  color: #292F33;
-  background-color: #fff;
-  border: 1px solid #E1E8ED;
-  border-radius: 5px;
-}
-
-@media (max-width: 767px) {
-
-  .blog li .blog__post {
-    margin: 0 0 3% 0;
-    !border: 1px solid rgba(134, 141, 162, .2);
-  }
-
-}
-
-.blog li .blog__post-source {
-  margin-top: 8%;
-  font-size: 13px;
-  color: #b7b7b7;
-}
-
-.blog li .blog__post img {
-  margin-top: 13px;
-}
-
-.blog li .blog__post-footer {
-  display: block;
-  margin-top: 8%;
-  padding-top: 5%;
-  line-height: 2;
-  color: #b7b7b7;
-  border-top: 1px solid #eee;
-}
-
-.blog li .blog__post-footer a {
-  color: #b7b7b7;
-}
-
-.blog li .blog__post-time {
-  font-size: 13px;
-}
-
-.blog li .blog__post-action {
-  font-size: 13px;
-  line-height: 2;
-}
-
-main .button {
-  padding: 8px 13px;
-  border: 1px solid #3498DB;
-  border-radius: 5px;
-}
-
-footer {
-  padding-top: 3%;
-  padding-bottom: 3%;
-}
-
-@media (max-width: 767px) {
-
-  footer {
-    padding-top: 0;
-    padding-bottom: 5%;
-  }
-
-}
-
-footer * {
-  font-size: 13px;
-}
-
-</style>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Student. Designer and developer. Passionate programmer. Ocassional blogger.">
+<meta name="keywords" content="Debashis Barman, Student, Designer and developer, Passionate programmer, Ocassional blogger.">
+<meta name="theme-color" content="#eee">
+<link rel="shortcut icon" href="./img/icon.png" type="image/x-icon" />
+<title>Debashis Barman&mdash; Student | Designer and Developer</title>
+<link href="./css/kathamo.css" rel="stylesheet">
+<link href="./css/master.css" rel="stylesheet">
 </head>
-<body>
 
-<header>
-<div class="container vertical-center">
-<div class="col-lg-offset-3 col-lg-6 col-md-offset-3 col-md-6 col-sm-offset-1 col-sm-10 text-center">
-<img class="avatar" src="./img/avatar.jpg">
-<h1>Debashis Barman</h1>
-<h2>Designer and developer; specialized in fluid design and mobile development; passionate programmer and microblogger.</h2>
-<p class="button-wrapper"><a class="button" href="./assets/DebashisBarmanCV.pdf">About Debashis Barman</a></p>
-<p>
-<a href="https://twitter.com/DebashisBarman"><span class="fa fa-fw fa-2x fa-twitter"></span></a>
-<a href="https://github.com/debashisbarman/"><span class="fa fa-fw fa-2x fa-github"></span></a>
-<a href="https://behance.net/debashisbarman/"><span class="fa fa-fw fa-2x fa-behance"></span></a>
-<a href="https://medium.com/@DebashisBarman"><span class="fa fa-fw fa-2x fa-medium"></span></a>
-<a href="https://in.linkedin.com/in/debashisbarman"><span class="fa fa-fw fa-2x fa-linkedin"></span></a>
-</p>
-</div>
-</div>
+<body class="db-site" id="debashis-barman">
+
+<header class="db-header clearfix hidden hidden--phone">
+<h2 class="db-subhead db-subhead--tagline"><small>Student. Designer and developer. Passionate programmer. Ocassional blogger.</small></h2>
 </header>
 
-<main class="clerfix">
-<div class="container">
-<div class="col-lg-12 col-md-12 col-sm-12">
-<div class="blog clearfix">
-<div id="tweecool"></div>
+<main class="grid db-grid--modified">
+<div class="cell cell--phone-12 cell--tablet-12 cell--desktop-12 text-align text-align--center">
+<h1 class="db-headline">Debashis Barman</h1>
+<h2 class="db-subhead db-subhead--tagline"><small>Student. Designer and developer. Passionate programmer. Ocassional blogger.</small></h2>
+<img class="db-avatar db-avatar--round" src="./img/avatar.jpg"><br>
+<button class="button button--round ui-controls ui-controls--hidden-all">Follow @DebashisBarman</button>
+</div>
+<div class="cell cell--phone-12 cell--tablet-12 cell--desktop-8">
+<div class="db-cell-modified">
+<h2 class="db-subhead">About Me</h2>
+<p class="db-cell-modified__para-intro">My name is Debashis Barman. I'm a <abbr>B. Tech.</abbr> student in Computer Science and Engineering in <a href="http://dbuniversity.ac.in/">Assam Don Bosco University</a>. I also work as a freelance web designer and developer. My projects are mostly hosted on <a href="https://github.com/debashisbarman/">Github</a> and <a href="http://behance.net/debashisbarman/">Behance</a>.</p>
+<h2 class="db-subhead">Projects (Academic + Non-academic)</h2>
+<ul class="db-projects-list">
+<li><h3 class="db-projects-list__title">Completed Projects</h3>
+<ol>
+<li><strong>PhD. Students Activity Management</strong>, Web Application<br>
+Developed a PhP / MySQL Database based web application as Mini Project for Director of Research, Assam
+Don Bosco University.<br>
+<code>PhP</code>&emsp;<code>MySQL</code>&emsp;<code>HTML 5</code>&emsp;<code>CSS 3</code></li>
+<li><strong>Random Security Code Generation</strong>, Application<br>
+Developed a C based application as Mini Project for generating Hash values as Manipulation Detection Code
+(MDC) for document verification purpose.<br>
+<code>C</code>&emsp;<code>Linux</code></li>
+<li><strong>Kathamo 5.0.0 (Stable)</strong>, CSS Framework<br>
+Developed a minimalist and mobile-friendly CSS framework for faster web development. (<a href="http://kathamo.github.io">kathamo.github.io</a>)<br>
+<code>CSS 3</code></li>
+<li><strong>Knowledge Exchange Network</strong>, Official Website<br>
+Developed an official website for Knowledge Exchange Network. (<a href="http://kenmanipur.org">kenmanipur.org</a>)<br>
+<code>PhP</code>&emsp;<code>MySQL</code>&emsp;<code>HTML 5</code>&emsp;<code>CSS 3</code>&emsp;<code>JS</code>&emsp;<code>jQuery</code></li>
+<li><strong>Dr. Surajit Barman</strong>, Website<br>
+Designed a personal website for Dr. Surajit Barman. (<a href="http://surajitbarman.in">surajitbarman.in</a>)<br>
+<code>HTML 5</code>&emsp;<code>CSS 3</code></li>
+<li><strong>North Kamrup College</strong>, Official Website<br>
+Developed an official website for North Kamrup College. (<a href="http://northkamrupcollege.in">northkamrupcollege.in</a>)<br>
+<code>PhP</code>&emsp;<code>MySQL</code>&emsp;<code>HTML 5</code>&emsp;<code>CSS 3</code>&emsp;<code>JS</code>&emsp;<code>jQuery</code></li>
+<li><strong>Prajyukttam 2015</strong>, Official Website<br>
+Developed the official website for Prajyukttam 2015. (<a href="http://prajyukttam.dbu.edu.in">prajyukttam.dbu.edu.in</a>)<br>
+<code>HTML 5</code>&emsp;<code>CSS 3</code>&emsp;<code>JS</code>&emsp;<code>jQuery</code></li>
+<li><strong>Prajyukttam 2015</strong>, Android Application<br>
+Developed the official android based application for Prajyukttam 2015. (<a href="https://play.google.com/store/apps/details?id=in.edu.dbu.prajyukttam.prajyukttam2015">Available on Google Play</a>)<br>
+<code>Java</code>&emsp;<code>Android</code></li>
+<li><strong>Sofia 1.0.2 (Stable)</strong>, Twitter Bot<br>
+Developed a Twitter Bot with Node.js and Twitter API. (<a href="https://twitter.com/@digitalsofia">twitter.com/@digitalsofia</a>)<br>
+<code>Nodejs</code>&emsp;<code>Twitter API</code></li>
+</ol>
+</li>
+<li><h3 class="db-projects-list__title">Ongoing Projects</h3>
+<ol>
+<li><strong>Crime Detection Through Video Surveillance</strong>, Application<br>
+Doing an application as a Major Project for crime scene detection through video surveillance.<br>
+<code>C++</code>&emsp;<code>OpenCV</code></li>
+</ol>
+</li>
+</ul>
+<p class="ui-controls ui-controls--hidden-print">(My academic CV can be found <a href="./assets/DebashisBarmanCV.pdf">here</a>.)</p>
 </div>
 </div>
+<div class="cell cell--phone-12 cell--tablet-12 cell--desktop-4">
+<h2 class="db-subhead">Basic Information</h2>
+<ul class="li-unstyled">
+<li><strong>Name : </strong>Debashis Barman</li>
+<li><strong>Address : </strong>Assam Don Bosco University, Guwahati, Assam, India, 781017</li>
+<li><strong>Contact : </strong><a href="tel:+91 88 76 342995">+91 88 76 342995</a></li>
+<li><strong>Email : </strong><a href="mailto:deb.dbuniversity@gmail.com">deb.dbuniversity@gmail.com</a></li>
+<li><strong>Website : </strong><a href="http://debashisbarman.in">debashisbarman.in</a></li>
+</ul>
+<h2 class="db-subhead">Proficiency / Skills</h2>
+<ul class="li-unstyled">
+<li><strong>Programming : </strong>C, C++, Java, Android, Assembly, Shell, Python</li>
+<li><strong>Web Technologies: </strong>HTML, XML, CSS, Bootstrap, Javascript, jQuery, Markdown, PhP</li>
+<li><strong>Operating Systems: </strong>Linux (Ubuntu / Fedora / Debian), Windows 7 / Windows XP</li>
+<li><strong>Database : </strong>SQL, MySQL, MongoDB</li>
+<li><strong>Softwares / Tools : </strong>LibreOffice, Microsoft Office, Android Studio, Eclipse, Bluefish, Git, Gimp / Inkscape, PhPMyAdmin</li>
+</ul>
+<h2 class="db-subhead">Internship / Training</h2>
+<ul class="li-unstyled">
+<li><a href="http://ernet.in">Education and Research Network</a>,<br>
+Department of Electronics and Information Technology, Govt. of India</li>
+</ul>
+<h2 class="db-subhead">Academic Interests</h2>
+<ul class="li-unstyled">
+<li>Computer Programming</li>
+<li>Operating Systems</li>
+<li>Theory of Computation</li>
+<li>Data Warehousing and Data Mining</li>
+<li>Digital Image Processing</li>
+</ul>
+<h2 class="db-subhead">Mentions</h2>
+<ul class="li-unstyled">
+<li><a href="https://github.com/debashisbarman">github.com/debashisbarman</a></li>
+<li><a href="https://twitter.com/@DebashisBarman">twitter.com/@DebashisBarman</a></li>
+<li><a href="https://medium.com/@DebashisBarman">medium.com/@DebashisBarman</a></li>
+<li><a href="https://behance.net/debashisbarman">behance.net/debashisbarman</a></li>
+<li><a href="https://in.linkedin.com/in/debashisbarman">in.linkedin.com/in/debashisbarman</a></li>
+</ul>
+<h2 class="db-subhead">About This Site</h2>
+<p>This URL has been my online home for last three years. Today it is an outlet for my design and development related ramblings. It is built with <a href="http://kathamo.github.io">Kathamo</a> and hosted on <a href="http://pages.github.com">Github Pages</a>.</p>
+<br><p class="ui-controls ui-controls--visible-phone"><a href="#debashis-barman">Go to top &uarr;</a></p>
 </div>
 </main>
 
-<footer class="container clearfix">
-<div class="col-lg-offset-3 col-lg-6 col-md-offset-3 col-md-6 col-sm-offset-1 col-sm-10 text-center">
-<p>
-<a href="https://twitter.com/DebashisBarman">Twitter</a>&emsp;
-<a href="https://github.com/debashisbarman/">Github</a>&emsp;
-<a href="https://behance.net/debashisbarman/">Behance</a>&emsp;
-<a href="https://medium.com/@DebashisBarman">Medium</a>&emsp;
-<a href="https://in.linkedin.com/in/debashisbarman">LinkedIn</a>
-</p>
-<p>&copy; 2015 Debashis Barman.</p>
+<footer class="db-footer clearfix">
+<div class="grid">
+<div class="cell cell--phone-12 cell--offset-tablet-1 cell--tablet-10 cell--offset-desktop-2 cell--desktop-8 text-align text-align--center">
+<h2 class="db-subhead db-subhead--tagline"><small>Student. Designer and developer. Passionate programmer. Ocassional blogger.</small></h2>
+<p>&copy; Debashis Barman. Last updated on 4 January, 2016.</p>
+</div>
 </div>
 </footer>
 
-<script>
-$(document).ready(function() {
-$('#tweecool').tweecool({
-username : 'DebashisBarman', 
-limit : 8,
-profile_image: false,
-show_actions: true,
-show_media: true
-});
-});
-</script>
-
-<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-ga('create', 'UA-49449513-1', 'auto');
-ga('send', 'pageview');
-
-</script>
-
 </body>
+
 </html>
