--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div class="db-cell-modified">
 <h2 class="db-subhead">About Me</h2>
 <p class="db-cell-modified__para-intro">My name is Debashis Barman. I'm a <abbr>B. Tech.</abbr> student in Computer Science and Engineering in <a href="http://dbuniversity.ac.in/">Assam Don Bosco University</a>. I also work as a freelance web designer and developer. My projects are mostly hosted on <a href="https://github.com/debashisbarman/">Github</a> and <a href="http://behance.net/debashisbarman/">Behance</a>.</p>
-<h2 class="db-subhead">Projects (Academic + Non-academic)</h2>
+<h2 class="db-subhead">Projects <span class="db-subhead__subtext">/ Academic + Non-academic</span></h2>
 <ul class="db-projects-list">
 <li><h3 class="db-projects-list__title">Completed Projects</h3>
 <ol>
@@ -86,7 +86,7 @@ Doing an application as a Major Project for crime scene detection through video 
 <li><strong>Email : </strong><a href="mailto:deb.dbuniversity@gmail.com">deb.dbuniversity@gmail.com</a></li>
 <li><strong>Website : </strong><a href="http://debashisbarman.in">debashisbarman.in</a></li>
 </ul>
-<h2 class="db-subhead">Proficiency / Skills</h2>
+<h2 class="db-subhead">Proficiency <span class="db-subhead__subtext">/ Skills</span></h2>
 <ul class="li-unstyled">
 <li><strong>Programming : </strong>C, C++, Java, Android, Assembly, Shell, Python</li>
 <li><strong>Web Technologies: </strong>HTML, XML, CSS, Bootstrap, Javascript, jQuery, Markdown, PhP</li>
@@ -94,7 +94,7 @@ Doing an application as a Major Project for crime scene detection through video 
 <li><strong>Database : </strong>SQL, MySQL, MongoDB</li>
 <li><strong>Softwares / Tools : </strong>LibreOffice, Microsoft Office, Android Studio, Eclipse, Bluefish, Git, Gimp / Inkscape, PhPMyAdmin</li>
 </ul>
-<h2 class="db-subhead">Internship / Training</h2>
+<h2 class="db-subhead">Internship <span class="db-subhead__subtext">/ Training</span></h2>
 <ul class="li-unstyled">
 <li><a href="http://ernet.in">Education and Research Network</a>,<br>
 Department of Electronics and Information Technology, Govt. of India</li>
