--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div class="db-cell-modified">
 <h2 class="db-subhead">About Me</h2>
 <p class="db-cell-modified__para-intro">My name is Debashis Barman. I'm a <abbr>B. Tech.</abbr> student in Computer Science and Engineering in <a href="http://dbuniversity.ac.in/">Assam Don Bosco University</a>. I also work as a freelance web designer and developer. My projects are mostly hosted on <a href="https://github.com/debashisbarman/">Github</a> and <a href="http://behance.net/debashisbarman/">Behance</a>.</p>
-<h2 class="db-subhead">Projects <span class="db-subhead__subtext">/ Academic + Non-academic</span></h2>
+<h2 class="db-subhead">Projects <span class="db-subhead__subtext">/ Academic & Non-academic</span></h2>
 <ul class="db-projects-list">
 <li><h3 class="db-projects-list__title">Completed Projects</h3>
 <ol>
