--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Department of Electronics and Information Technology, Govt. of India</li>
 <li>Data Warehousing and Data Mining</li>
 <li>Digital Image Processing</li>
 </ul>
-<h2 class="db-subhead">Mentions</h2>
+<h2 class="db-subhead">Mentions <span class="db-subhead__subtext">/ Links</span></h2>
 <ul class="li-unstyled">
 <li><a href="https://github.com/debashisbarman">github.com/debashisbarman</a></li>
 <li><a href="https://twitter.com/@DebashisBarman">twitter.com/@DebashisBarman</a></li>
