--- a/index.html
+++ b/index.html
@@ -2,16 +2,21 @@
 <html lang="en">
 
 <head>
+<title>Debashis Barman&mdash; Student | Designer and Developer</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Student. Designer and developer. Passionate programmer. Ocassional blogger.">
 <meta name="keywords" content="Debashis Barman, Student, Designer and developer, Passionate programmer, Ocassional blogger.">
 <meta name="theme-color" content="#eee">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="#eee">
 <link rel="shortcut icon" href="./img/icon.png" type="image/x-icon" />
-<title>Debashis Barman&mdash; Student | Designer and Developer</title>
+<link rel="apple-touch-icon" href="./img/icon.png"/>
 <link href="./css/kathamo.css" rel="stylesheet">
 <link href="./css/master.css" rel="stylesheet">
+<link rel="manifest" href="./manifest.json">
 </head>
 
 <body class="db-site" id="debashis-barman">
@@ -24,7 +29,7 @@
 <div class="cell cell--phone-12 cell--tablet-12 cell--desktop-12 text-align text-align--center">
 <h1 class="db-headline">Debashis Barman</h1>
 <h2 class="db-subhead db-subhead--tagline"><small>Student. Designer and developer. Passionate programmer. Ocassional blogger.</small></h2>
-<img class="db-avatar db-avatar--round" src="./img/avatar.jpg"><br>
+<div class="db-avatar db-avatar--round"></div>
 <button class="button button--round ui-controls ui-controls--hidden-all">Follow @DebashisBarman</button>
 </div>
 <div class="cell cell--phone-12 cell--tablet-12 cell--desktop-8">
@@ -129,6 +134,17 @@ Department of Electronics and Information Technology, Govt. of India</li>
 </div>
 </div>
 </footer>
+
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-49449513-1', 'auto');
+ga('send', 'pageview');
+
+</script>
 
 </body>
 
