--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body class="db-site" id="debashis-barman">
 
-<header class="db-header clearfix hidden hidden--phone">
+<header class="db-header clearfix ui-controls ui-controls--hidden-phone">
 <h2 class="db-subhead db-subhead--tagline"><small>Student. Designer and developer. Passionate programmer. Ocassional blogger.</small></h2>
 </header>
 
@@ -54,8 +54,8 @@ Developed a minimalist and mobile-friendly CSS framework for faster web developm
 <li><strong>Knowledge Exchange Network</strong>, Official Website<br>
 Developed an official website for Knowledge Exchange Network. (<a href="http://kenmanipur.org">kenmanipur.org</a>)<br>
 <code>PhP</code>&emsp;<code>MySQL</code>&emsp;<code>HTML 5</code>&emsp;<code>CSS 3</code>&emsp;<code>JS</code>&emsp;<code>jQuery</code></li>
-<li><strong>Dr. Surajit Barman</strong>, Website<br>
-Designed a personal website for Dr. Surajit Barman. (<a href="http://surajitbarman.in">surajitbarman.in</a>)<br>
+<li><strong>Dr. Y. Jayanta Singh</strong>, Website<br>
+Designed a personal website for Dr. Y. Jayanta Singh. (<a href="http://yjayantasingh.in">yjayantasingh.in</a>)<br>
 <code>HTML 5</code>&emsp;<code>CSS 3</code></li>
 <li><strong>North Kamrup College</strong>, Official Website<br>
 Developed an official website for North Kamrup College. (<a href="http://northkamrupcollege.in">northkamrupcollege.in</a>)<br>
@@ -130,7 +130,7 @@ Department of Electronics and Information Technology, Govt. of India</li>
 <div class="grid">
 <div class="cell cell--phone-12 cell--offset-tablet-1 cell--tablet-10 cell--offset-desktop-2 cell--desktop-8 text-align text-align--center">
 <h2 class="db-subhead db-subhead--tagline"><small>Student. Designer and developer. Passionate programmer. Ocassional blogger.</small></h2>
-<p>&copy; Debashis Barman. Last updated on 4 January, 2016.</p>
+<p>&copy; Debashis Barman. Last updated on 19 January, 2016.</p>
 </div>
 </div>
 </footer>
