--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
 <p class="db-cell-modified__para-intro">My name is Debashis Barman. I'm a <abbr>B. Tech.</abbr> student in Computer Science and Engineering in <a href="http://dbuniversity.ac.in/">Assam Don Bosco University</a>. I also work as a freelance web designer and developer. My projects are mostly hosted on <a href="https://github.com/debashisbarman/">Github</a> and <a href="http://behance.net/debashisbarman/">Behance</a>.</p>
 <h2 class="db-subhead">Projects <span class="db-subhead__subtext">/ Academic & Non-academic</span></h2>
 <ul class="db-projects-list">
+<li><h3 class="db-projects-list__title">Ongoing Projects</h3>
+<ol>
+<li><strong>Mini OS 0.0.01</strong>, Hobby Operating System<br>
+Developed a hobby operating system with monolithic kernel design and clean implementation for x86 machines. (<a href="https://github.com/debashisbarman/minios">Source Code</a>)<br>
+<code>C</code>&emsp;<code>Assembly</code></li>
+<li><strong>Crime Detection Through Video Surveillance</strong>, Application<br>
+Doing an application as a Major Project for crime scene detection through video surveillance.<br>
+<code>C++</code>&emsp;<code>OpenCV</code></li>
+</ol>
+</li>
 <li><h3 class="db-projects-list__title">Completed Projects</h3>
 <ol>
 <li><strong>PhD. Students Activity Management</strong>, Web Application<br>
@@ -69,13 +79,6 @@ Developed the official android based application for Prajyukttam 2015. (<a href=
 <li><strong>Sofia 1.0.2 (Stable)</strong>, Twitter Bot<br>
 Developed a Twitter Bot with Node.js and Twitter API. (<a href="https://twitter.com/@digitalsofia">twitter.com/@digitalsofia</a>)<br>
 <code>Nodejs</code>&emsp;<code>Twitter API</code></li>
-</ol>
-</li>
-<li><h3 class="db-projects-list__title">Ongoing Projects</h3>
-<ol>
-<li><strong>Crime Detection Through Video Surveillance</strong>, Application<br>
-Doing an application as a Major Project for crime scene detection through video surveillance.<br>
-<code>C++</code>&emsp;<code>OpenCV</code></li>
 </ol>
 </li>
 </ul>
