--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ Department of Electronics and Information Technology, Govt. of India</li>
 </ul>
 <h2 class="db-subhead">About This Site</h2>
 <p>This URL has been my online home for last three years. Today it is an outlet for my design and development related ramblings. It is built with <a href="http://kathamo.github.io">Kathamo</a> and hosted on <a href="http://pages.github.com">Github Pages</a>.</p>
-<p>The most upto date version of this website can be found <a href="http://debashisbarman.github.io">here</a>. The link will redirect to here if this is the most upto date.</p>
+<p>The most upto date version of this website can be found <a href="http://debashisbarman.github.io">here</a>. It will redirect to here if this is the most upto date.</p>
 <br><p class="ui-controls ui-controls--visible-phone"><a href="#debashis-barman">Go to top &uarr;</a></p>
 </div>
 </main>
