--- a/index.html
+++ b/index.html
@@ -35,54 +35,49 @@
 <div class="cell cell--phone-12 cell--tablet-12 cell--desktop-8">
 <div class="db-cell-modified">
 <h2 class="db-subhead">About Me</h2>
-<p class="db-cell-modified__para-intro">My name is Debashis Barman. I'm a <abbr>B. Tech.</abbr> student in Computer Science and Engineering in <a href="http://dbuniversity.ac.in/">Assam Don Bosco University</a>. I also work as a freelance web designer and developer. My projects are mostly hosted on <a href="https://github.com/debashisbarman/">Github</a> and <a href="http://behance.net/debashisbarman/">Behance</a>.</p>
-<h2 class="db-subhead">Projects <span class="db-subhead__subtext">/ Academic & Non-academic</span></h2>
+<p class="db-cell-modified__para-intro">My name is Debashis Barman. I'm a <abbr>B. Tech.</abbr> student in Computer Science and Engineering in <a href="http://dbuniversity.ac.in/">Assam Don Bosco University</a>. I also work as a freelance web designer and developer. My projects are mostly hosted on <a href="https://github.com/debashisbarman/">Github</a> and <a href="http://behance.net/debashisbarman/">Behance</a>.<br><br>
+<span class="ui-controls ui-controls--hidden-print">(My academic CV can be found <a href="./assets/DebashisBarmanCV.pdf">here</a>.)</span></p>
+<h2 class="db-subhead">Publication <span class="db-subhead__subtext">/ Peer Reviewed Paper</span></h2>
 <ul class="db-projects-list">
-<li><h3 class="db-projects-list__title">Ongoing Projects</h3>
-<ol>
-<li><strong>Mini OS 0.0.01</strong>, Hobby Operating System<br>
-Developed a hobby operating system with monolithic kernel design and clean implementation for x86 machines. (<a href="https://github.com/debashisbarman/minios">Source Code</a>)<br>
-<code>C</code>&emsp;<code>Assembly</code></li>
-<li><strong>Crime Detection Through Video Surveillance</strong>, Application<br>
-Doing an application as a Major Project for crime scene detection through video surveillance.<br>
-<code>C++</code>&emsp;<code>OpenCV</code></li>
-</ol>
-</li>
-<li><h3 class="db-projects-list__title">Completed Projects</h3>
-<ol>
-<li><strong>PhD. Students Activity Management</strong>, Web Application<br>
-Developed a PhP / MySQL Database based web application as Mini Project for Director of Research, Assam
-Don Bosco University.<br>
-<code>PhP</code>&emsp;<code>MySQL</code>&emsp;<code>HTML 5</code>&emsp;<code>CSS 3</code></li>
-<li><strong>Random Security Code Generation</strong>, Application<br>
-Developed a C based application as Mini Project for generating Hash values as Manipulation Detection Code
-(MDC) for document verification purpose.<br>
-<code>C</code>&emsp;<code>Linux</code></li>
-<li><strong>Kathamo 5.0.0 (Stable)</strong>, CSS Framework<br>
-Developed a minimalist and mobile-friendly CSS framework for faster web development. (<a href="http://kathamo.github.io">kathamo.github.io</a>)<br>
-<code>CSS 3</code></li>
-<li><strong>Knowledge Exchange Network</strong>, Official Website<br>
-Developed an official website for Knowledge Exchange Network. (<a href="http://kenmanipur.org">kenmanipur.org</a>)<br>
-<code>PhP</code>&emsp;<code>MySQL</code>&emsp;<code>HTML 5</code>&emsp;<code>CSS 3</code>&emsp;<code>JS</code>&emsp;<code>jQuery</code></li>
-<li><strong>Dr. Y. Jayanta Singh</strong>, Website<br>
-Designed a personal website for Dr. Y. Jayanta Singh. (<a href="http://yjayantasingh.in">yjayantasingh.in</a>)<br>
-<code>HTML 5</code>&emsp;<code>CSS 3</code></li>
-<li><strong>North Kamrup College</strong>, Official Website<br>
-Developed an official website for North Kamrup College. (<a href="http://northkamrupcollege.in">northkamrupcollege.in</a>)<br>
-<code>PhP</code>&emsp;<code>MySQL</code>&emsp;<code>HTML 5</code>&emsp;<code>CSS 3</code>&emsp;<code>JS</code>&emsp;<code>jQuery</code></li>
-<li><strong>Prajyukttam 2015</strong>, Official Website<br>
-Developed the official website for Prajyukttam 2015. (<a href="http://prajyukttam.dbu.edu.in">prajyukttam.dbu.edu.in</a>)<br>
-<code>HTML 5</code>&emsp;<code>CSS 3</code>&emsp;<code>JS</code>&emsp;<code>jQuery</code></li>
-<li><strong>Prajyukttam 2015</strong>, Android Application<br>
-Developed the official android based application for Prajyukttam 2015. (<a href="https://play.google.com/store/apps/details?id=in.edu.dbu.prajyukttam.prajyukttam2015">Available on Google Play</a>)<br>
-<code>Java</code>&emsp;<code>Android</code></li>
-<li><strong>Sofia 1.0.2 (Stable)</strong>, Twitter Bot<br>
-Developed a Twitter Bot with Node.js and Twitter API. (<a href="https://twitter.com/@digitalsofia">twitter.com/@digitalsofia</a>)<br>
-<code>Nodejs</code>&emsp;<code>Twitter API</code></li>
-</ol>
+<li>
+<h3 class="db-projects-list__title">A Study on Human Activity Recognition From Video</h3>
+<p>Published in the proceedings of <em><q>10<sup>th</sup> INDIACom : 3<sup>rd</sup> 2016 International Conference on Computing for Sustanable Global Development</q></em>, <a href="http://bvicam.in">Bharati Vidyapeeth's Institute of Computer Applications and Management</a>, Delhi, <em>ISSN 
+0973-7529; ISBN 978-93-80544-20-5</em> (<a href="./assets/AStudyOnHumanActivityRecognitionFromVideo.pdf">pdf</a>)</p>
 </li>
 </ul>
-<p class="ui-controls ui-controls--hidden-print">(My academic CV can be found <a href="./assets/DebashisBarmanCV.pdf">here</a>.)</p>
+<h2 class="db-subhead">Projects <span class="db-subhead__subtext">/ Academic & Non-academic</span></h2>
+<ul class="db-projects-list">
+<li>
+<h3 class="db-projects-list__title">Design of a 32 bit Multi-Tasking Kernel</h3>
+<p>Originally started as a <em>hobby project</em>, I developed an educational kernel with monolithic design and clean implementation for i386 machines. The entire kernel was written from <em>scratch</em> in C and Assembly. Currently this project is hosted on <a href="https://github.com/debashisbarman/minios">Github</a>.</p>
+</li>
+<li>
+<h3 class="db-projects-list__title">Abnormal Human Activity Detection Through Video Surveillance</h3>
+<p>As a part of my B.Tech curriculum, I've undertaken this project as my <em>major project</em> under the guidance of <a href="http://dbuniversity.ac.in/Dr-Y-Jayanta-Singh.php">Dr. Y. Jayanata Singh</a>. The main objective of this project is to detect crime scene through video surveillance. Currently this project is under active development.</p>
+</li>
+<li>
+<h3 class="db-projects-list__title">Random Security Code Generation<sup>&lowast;</sup></h3>
+<p>I worked on this project as part of my academic project <em>(minor project, phase II)</em> under the guidance of <a href="http://dbuniversity.ac.in/Dr-Y-Jayanta-Singh.php">Dr. Y. Jayanata Singh</a>. The main objective of this project was to provide a mechanism to generate manipulation detection code <em>(MDC)</em> that can be applied to ensure data integrity.</p>
+<p><em>&lowast;</em> In 2015, this project recieved <em>Second Prize</em> in Oral Presentation in <em><q>A Symposium on E-Vision for Digital India</q></em> organized by Department of Electronics and Communication Technology, School of Technology, Assam Don Bosco University.</p>
+</li>
+<li>
+<h3 class="db-projects-list__title">PhD. Scholars' Activity Management</h3>
+<p>I worked on this project as part of my academic project <em>(minor project, phase I)</em> under the guidance of <a href="http://dbuniversity.ac.in/Dr-Y-Jayanta-Singh.php">Dr. Y. Jayanata Singh</a>. This was a web application developed by me as per the requirements of the Director of Research, Assam Don Bosco University. Currently this project is no longer maintained.</p>
+</li>
+</ul>
+<h2 class="db-subhead">Conferences &amp; Symposium</h2>
+<ul class="db-projects-list">
+<li><strong><q>10<sup>th</sup> INDIACom : 3<sup>rd</sup> 2016 International Conference on Computing for Sustanable Global Development</q></strong>, <a href="http://bvicam.in">Bharati Vidyapeeth's Institute of Computer Applications and Management</a>, Delhi</li>
+<li><strong><q>A Symposium on E-Vision for Digital India</q></strong>, Department of Electronics and Communication Technology, School of Technology, Assam Don Bosco University</li>
+</ul>
+<h2 class="db-subhead">Invited Talk & Workshops</h2>
+<ul class="db-projects-list">
+<li>Resource Person, <strong>Workshop on <q>Basics of Kernel Programming</q></strong>, Coding Club, Department of Computer Science &amp; Engineering and Information Technology, School of Technology, Assam Don Bosco University</li>
+<li>Resource Person, <strong>Session on <q>Graphics Programming in C</q></strong>, Coding Club, Department of Computer Science &amp; Engineering and Information Technology, School of Technology, Assam Don Bosco University</li>
+</ul>
+<h2 class="db-subhead">Miscellaneous</h2>
+<p>I had the priviledge to work on some interesting projects, mostly on web design and development. Some of them are <a href="http://kenmanipur.org">KEN Manipur</a>, <a href="http://northkamrupcollege.in">North Kamrup College</a>, <a href="http://yjayantasingh.in">Dr. Y. Jayanta Singh</a>, <a href="http://surajitbarman.in">Dr. Surajit Barman</a> and <a href="http://prajyukttam.dbu.edu.in">Prajyukttam 2015</a>.</p>
+<p>I also developed the official android applications for <em>Prajyukttam 2015</em> which was published on <a href="https://play.google.com/store/apps/details?id=in.edu.dbu.prajyukttam.prajyukttam2015">Google Play</a>.</p>
 </div>
 </div>
 <div class="cell cell--phone-12 cell--tablet-12 cell--desktop-4">
@@ -115,6 +110,18 @@ Department of Electronics and Information Technology, Govt. of India</li>
 <li>Data Warehousing and Data Mining</li>
 <li>Digital Image Processing</li>
 </ul>
+<h2 class="db-subhead">Downloads</h2>
+<p>At some part of my academic career, I initiated some projects purely for educational purpose which finally turned into some mature products.</p>
+<ul class="db-projects-list">
+<li>
+<h3 class="db-projects-list__title">Kathamo CSS Framework</h3>
+<p>Kathamo is a Minimalist CSS Framework for rapid and mobile-friendly development. (<a href="http://kathamo.github.io">Download</a>)</p>
+</li>
+<li>
+<h3 class="db-projects-list__title">Sofia 1.0.2 (Stable)</h3>
+<p>Sofia (<a href="https://twitter.com/@DigitalSofia">@DigitalSofia</a>) is a Twitter bot written by me in Node.js with Twitter API. (<a href="http://debashisbarman.in/Sofia">Download</a> / <a href="https://medium.com/@DebashisBarman/creating-a-twitter-bot-with-node-js-bea760b80bd5#.bztyizof8">Tutorial</a>)</p>
+</li>
+</ul>
 <h2 class="db-subhead">Mentions <span class="db-subhead__subtext">/ Links</span></h2>
 <ul class="li-unstyled">
 <li><a href="https://github.com/debashisbarman">github.com/debashisbarman</a></li>
@@ -124,7 +131,7 @@ Department of Electronics and Information Technology, Govt. of India</li>
 <li><a href="https://in.linkedin.com/in/debashisbarman">in.linkedin.com/in/debashisbarman</a></li>
 </ul>
 <h2 class="db-subhead">About This Site</h2>
-<p>This URL has been my online home for last three years. Today it is an outlet for my design and development related ramblings. It is built with <a href="http://kathamo.github.io">Kathamo</a> and hosted on <a href="http://pages.github.com">Github Pages</a>.</p>
+<p>This URL has been my online home for last three years. It is built with <a href="http://kathamo.github.io">Kathamo</a> and hosted on <a href="http://pages.github.com">Github Pages</a>.</p>
 <p>The most upto date version of this website can be found <a href="http://debashisbarman.github.io">here</a>. It will redirect to here if this is the most upto date.</p>
 <br><p class="ui-controls ui-controls--visible-phone"><a href="#debashis-barman">Go to top &uarr;</a></p>
 </div>
@@ -134,7 +141,7 @@ Department of Electronics and Information Technology, Govt. of India</li>
 <div class="grid">
 <div class="cell cell--phone-12 cell--offset-tablet-1 cell--tablet-10 cell--offset-desktop-2 cell--desktop-8 text-align text-align--center">
 <h2 class="db-subhead db-subhead--tagline"><small>Student. Designer and developer. Passionate programmer. Ocassional blogger.</small></h2>
-<p>&copy; Debashis Barman. Last updated on 5 March, 2016.</p>
+<p>&copy; Debashis Barman. Last updated on 22 March, 2016.</p>
 </div>
 </div>
 </footer>
