geek.js and humans.txt

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 <link href="./css/kathamo.css" rel="stylesheet">
 <link href="./css/master.css" rel="stylesheet">
 <link rel="manifest" href="./manifest.json">
+<script src="./js/geek.js" type="text/javascript"></script>
 </head>
 
-<body class="db-site" id="debashis-barman">
+<body onload="geek()" class="db-site" id="debashis-barman">
 
 <header class="db-header clearfix ui-controls ui-controls--hidden-phone">
 <h2 class="db-subhead db-subhead--tagline"><small>Student. Designer and developer. Passionate programmer. Ocassional blogger.</small></h2>
