--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <li><strong><q>10<sup>th</sup> INDIACom : 3<sup>rd</sup> 2016 International Conference on Computing for Sustanable Global Development</q></strong>, <a href="http://bvicam.in">Bharati Vidyapeeth's Institute of Computer Applications and Management</a>, Delhi</li>
 <li><strong><q>A Symposium on E-Vision for Digital India</q></strong>, Department of Electronics and Communication Technology, School of Technology, Assam Don Bosco University</li>
 </ul>
-<h2 class="db-subhead">Invited Talk & Workshops</h2>
+<h2 class="db-subhead">Invited Talk &amp; Workshops</h2>
 <ul class="db-projects-list">
 <li>Resource Person, <strong>Workshop on <q>Basics of Kernel Programming</q></strong>, Coding Club, Department of Computer Science &amp; Engineering and Information Technology, School of Technology, Assam Don Bosco University</li>
 <li>Resource Person, <strong>Session on <q>Graphics Programming in C</q></strong>, Coding Club, Department of Computer Science &amp; Engineering and Information Technology, School of Technology, Assam Don Bosco University</li>
