--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </li>
 <li>
 <h3 class="db-projects-list__title">Abnormal Human Activity Detection Through Video Surveillance</h3>
-<p>As a part of my B.Tech curriculum, I've undertaken this project as my <em>major project</em> under the guidance of <a href="http://dbuniversity.ac.in/Dr-Y-Jayanta-Singh.php">Dr. Y. Jayanata Singh</a>. The main objective of this project is to detect crime scene through video surveillance. Currently this project is under active development.</p>
+<p>As a part of my B.Tech curriculum, I've undertaken this project as my <em>major project</em> under the guidance of <a href="http://dbuniversity.ac.in/Dr-Y-Jayanta-Singh.php">Dr. Y. Jayanata Singh</a>. The main objective of this project is to detect crime scene through video surveillance. (<a href="https://github.com/debashisbarman/HumanActivityRecognition">Github</a>)</p>
 </li>
 <li>
 <h3 class="db-projects-list__title">Random Security Code Generation<sup>&lowast;</sup></h3>
